set the base url for the router and update the nginx config to serve from a subdirectory

--- a/infra/nginx/conf.d/default.conf
+++ b/infra/nginx/conf.d/default.conf
@@ -2,15 +2,23 @@ server {
     listen       80;
     listen  [::]:80;
     server_name  localhost;
+    root /usr/share/nginx/html;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location / {
+#     location / {
+#         root   /usr/share/nginx/html;
+#         index  index.html index.htm;
+#         try_files $uri $uri/ /index.html;
+#     }
+
+    location /home-dashboard {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
-    #error_page  404              /404.html;
+#     error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
