--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,6 +40,6 @@ jobs:
         context: .
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/home-dashboard-fe:latest
-        platforms: linux/amd64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64/v8
 
 
